# CyberGarden-HackPlatform

./: LICENSE  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  app.py  docker-entrypoint.sh  models.py  prod-requirements.txt  pyproject.toml  requirements.txt  settings.py
backend/crud/: hacks.py  locations.py  participants.py  preprocess.py  teams.py  users.py  words.json
backend/tools/: data.json  db.py  hack_parser.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: _api.js  app.css  app.html  hooks.js
frontend/src/lib/: _api.js  _store.js  api.js
frontend/src/lib/Header/: index.svelte
frontend/src/lib/LittleTeam/: index.svelte
frontend/src/lib/MainButton/: index.svelte
frontend/src/lib/Post/: index.svelte
frontend/src/lib/TeamCard/: index.svelte
frontend/src/routes/: [nameTeam].svelte  __layout.svelte  account.svelte  authorization.svelte  eventPage-[nameEvent].svelte  eventPage.svelte  eventRegistration.svelte  index.svelte  poster.svelte  registration.svelte  team-[nameTeam].svelte  teamCreator.svelte  teaming.svelte
frontend/src/routes/events/: [hackId]-createNews.svelte  [hackId].svelte  admin.svelte  create.svelte  eventAdmin.svelte  newsCreator.svelte  poster.svelte
frontend/src/routes/teams/: [teamId].svelte  create.svelte  enter-[token].svelte  self.svelte
frontend/src/routes/users/: self.svelte  signin.svelte  signup.svelte
notifier/: .gitignore  Dockerfile  main.go
notifier/tg/: api.go
notifier/vk/: api.go
traefik/: traefik.yaml
